crates/kirin-chumsky-format-old/src/snapshots/kirin_chumsky_format__parse__tests__format_parser-2.snap
---
source: crates/kirin-chumsky-format/src/parse.rs
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "load",
                ),
                Identifier(
                    "something",
                ),
            ],
        ),
        Field(
            "value",
            Name,
        ),
        Token(
            [
                Identifier(
                    "from",
                ),
            ],
        ),
        Field(
            "address",
            Default,
        ),
        Token(
            [
                Colon,
            ],
        ),
        Field(
            "value",
            Type,
        ),
        Token(
            [
                Arrow,
            ],
        ),
        Field(
            "result",
            Type,
        ),
    ],
    fields: {
        "value": 0,
        "address": 1,
        "result": 2,
    },
}
